	  32-bit or vice versa. Oops :)
	  (Sunil <funtoos at yahoo.com> )
	* Added 3.2.0 as a backend version for nxloadconfig.
	  (fabianx@bat.berlios.de)
	* Added configuration key ENABLE_SOURCE_BASH_PROFILE for toggling of 
	  sourcing ~/.bash_profile.
	  (fabianx@bat.berlios.de)
	* Added /usr/bin/xauth as default key and used /usr/X11R6/bin/xauth as
	  fallback.
	  (fabianx@bat.berlios.de)

14.03.2008 FreeNX 0.7.2 "Priscilla Edition"
	* Opened the 0.7.2 development.
	* Fixed the display of local sessions to display only 
	  when session type is VNC.
	  (fabianx@bat.berlios.de)
	* Fixed the issue that commercial NXClient was called with 0 parameters
	  and such the "Connection Wizard" came up.
	  (fabianx@bat.berlios.de)
	* Added freenx-server startup script. You can make a symlink to
	  /etc/init.d/ to have it start automatically.
	  (fabianx@bat.berlios.de)
	* Added catching of exception after failed nscd command.
	  (fabianx@bat.berlios.de)
	* Invoke curl with --proxy "" for automatic download of ppd files.
	  (Wolfgang Schweer <schweer@cityweb.de>)
	* Reorganized nxsetup to have a function for parsing command line
	  options.
	  (fabianx@bat.berlios.de)
	* Added nxsetup --test to test the configuration and connection to
	  localhost nxserver.
	  (fabianx@bat.berlios.de)
	* Added -o ConnectTimeout 3 to nxnode-login for test-nx case.
	  (cedric briner <work@infomaniak.ch>)
	* Added more examples for "failed ssh connection to localhost" cases.
	  (cedric briner <work@infomaniak.ch>, fabianx@bat.berlios.de)
	* Fixed helpers (desktop, viewer) to honour the AGENT_EXTRA_OPTIONS_{RDP,RFB}
	  parameters set in node.conf.
	  (fabianx@bat.berlios.de)
	* Fixed the default value for ENABLE_CLIPBOARD="both" instead of ' = '.
	  (fabianx@bat.berlios.de)
	* Fixed parsing of SMB port and added a fallback if mport file is empty.
	  (Patch from Gentoo Portage)
	* Run nscd only when nscd.pid is present.
	  (Patch from Gentoo Portage)